k8s/python-k8s-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-container
        image: python-k8s-app:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000

        volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: secret-volume
          mountPath: /secrets
          readOnly: true

      volumes:
      - name: config-volume
        configMap:
          name: python-app-config
      - name: secret-volume
        secret:
          secretName: python-app-secret
