k8s/python-k8s-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
