k8s/python-k8s-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - python.local
    secretName: python-app-tls
  rules:
  - host: python.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 5000
